[oc] update from Pootle (firefox)

--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -151,6 +151,8 @@ pluginActivateNow.accesskey=t
 # LOCALIZATION NOTE (pluginActivateAlways.label): This button will enable the
 # plugin for a long while (90 days), auto-renewed if the site keeps using the
 # plugin.
+pluginActivateAlways.label=Activar e se'n Remembrar
+pluginActivateAlways.accesskey=R
 pluginBlockNow.label=Blocar lo plugin
 pluginBlockNow.accesskey=B
 pluginContinue.label=Daissar activat
@@ -257,6 +259,7 @@ offlineApps.available=Aqueste site web (%S) vòl conservar de donadas sus vòstr
 offlineApps.allow=Autorizar
 offlineApps.allowAccessKey=Autorizar
 offlineApps.never=Pas jamai per aqueste site
+offlineApps.neverAccessKey=e
 offlineApps.notNow=Pas ara
 offlineApps.notNowAccessKey=Pas per aqueste còp
 
@@ -298,6 +301,8 @@ editBookmarkPanel.editBookmarkTitle=Modificar aqueste marcapaginas
 editBookmark.removeBookmarks.label=Suprimir lo marcapaginas;Suprimir los #1 marcapaginas
 
 # Post Update Notifications
+pu.notifyButton.label=Detalhs…
+pu.notifyButton.accesskey=D
 # LOCALIZATION NOTE %S will be replaced by the short name of the application.
 puNotifyText=%S es estat mes a jorn
 puAlertTitle=%S es estat mes a jorn
@@ -339,8 +344,14 @@ pointerLock.autoLock.title2=%S amagarà lo puntador.
 # LOCALIZATION NOTE (notAForgery, notAnAttack)
 # The two button strings will never be shown at the same time, so
 # it's okay for them to have the same access key
+safebrowsing.getMeOutOfHereButton.label=Sortissètz-me d'aicí !
+safebrowsing.getMeOutOfHereButton.accessKey=S
 safebrowsing.reportedWebForgery=Aqueste site es estat senhalat coma una contrafaiçon !
+safebrowsing.notAForgeryButton.label=Aquò es pas una contrafaiçon de site Web…
+safebrowsing.notAForgeryButton.accessKey=f
 safebrowsing.reportedAttackSite=Aqueste site es estat senhalat coma una malvolent !
+safebrowsing.notAnAttackButton.label=Aqueste site es pas malvolent…
+safebrowsing.notAnAttackButton.accessKey=A
 
 # Ctrl-Tab
 # LOCALIZATION NOTE (ctrlTab.showAll.label): #1 represents the number
@@ -404,9 +415,12 @@ syncPromoNotification.addons-sync-disabled.description=Podètz utilizar vòstre 
 
 # Mozilla data reporting notification (Telemetry, Firefox Health Report, etc)
 dataReportingNotification.message       = %1$S manda automaticament d'unas informacions a %2$S per tal que poscam melhorar vòstra experiéncia.
+dataReportingNotification.button.label  = Causir çò que mandi
+dataReportingNotification.button.accessKey  = C
 
 # Webapps notification popup
 webapps.install = Installar
+webapps.install.accesskey = I
 #LOCALIZATION NOTE (webapps.requestInstall) %1$S is the web app name, %2$S is the site from which the web app is installed
 webapps.requestInstall = Volètz installar « %1$S » a partir del site (%2$S) ?
 webapps.install.success = Aplicacion installada
@@ -425,6 +439,8 @@ service.toolbarbutton.tooltiptext=Servicis
 
 # LOCALIZATION NOTE (social.install.description): %1$S is the hostname of the social provider, %2$S is brandShortName (e.g. Firefox)
 service.install.description=Volètz activar los servicis de %1$S per un afichatge dins la barra d'aisinas e lo panèl lateral de %2$S ?
+service.install.ok.label=Activar los servicis
+service.install.ok.accesskey=A
 
 # LOCALIZATION NOTE (social.markpageMenu.label): %S is the name of the social provider
 social.markpageMenu.label=Mandar la pagina a %S
@@ -433,6 +449,10 @@ social.marklinkMenu.label=Mandar lo ligam a %S
 
 # LOCALIZATION NOTE (social.error.message): %1$S is brandShortName (e.g. Firefox), %2$S is the name of the social provider
 social.error.message=%1$S se pòt pas connectar actualament amb %2$S.
+social.error.tryAgain.label=Ensajatz tornarmai
+social.error.tryAgain.accesskey=t
+social.error.closeSidebar.label=Tampar aqueste panèl lateral
+social.error.closeSidebar.accesskey=T
 
 # LOCALIZATION NOTE: %1$S is the label for the toolbar button, %2$S is the associated badge numbering that the social provider may provide.
 social.aria.toolbarButtonBadgeText=%1$S (%2$S)
@@ -443,12 +463,18 @@ identity.privacyPolicy = Politica de confidencialitat
 # LOCALIZATION NOTE (identity.chooseIdentity.description): %S is the website origin (e.g. https://www.mozilla.org) shown in popup notifications.
 identity.chooseIdentity.description = S'identificar sus %S
 identity.chooseIdentity.label = Utilizar una adreça electronica existenta
+identity.newIdentity.label = Utilizar una adreça electronica diferenta
+identity.newIdentity.accessKey = e
 identity.newIdentity.email.placeholder = Adreça de corrièr electronic
 # LOCALIZATION NOTE (identity.newIdentity.description): %S is the website origin (e.g. https://www.mozilla.org) shown in popup notifications.
 identity.newIdentity.description = Picatz vòstra adreça de corrièr electronic per vos enregistrar dins %S
+identity.next.label = Seguent
+identity.next.accessKey = S
 # LOCALIZATION NOTE: shown in the popup notification when a user successfully logs into a website
 # LOCALIZATION NOTE (identity.loggedIn.description): %S is the user's identity (e.g. user@example.com)
 identity.loggedIn.description = Identificat en tant que : %S
+identity.loggedIn.signOut.label = Se desconnectar
+identity.loggedIn.signOut.accessKey = d
 
 # LOCALIZATION NOTE (getUserMedia.shareCamera.message, getUserMedia.shareMicrophone.message, getUserMedia.shareCameraAndMicrophone.message): %S is the website origin (e.g. www.mozilla.org)
 # LOCALIZATION NOTE (getUserMedia.shareSelectedDevices.label):
@@ -460,9 +486,19 @@ getUserMedia.shareMicrophone.message = Volètz partejar vòstre microfòn amb %S
 getUserMedia.shareCameraAndMicrophone.message = Volètz partejar vòstra webcam e vòstre microfòn amb %S ?
 getUserMedia.noVideo.label = Pas cap de vidèo
 getUserMedia.noAudio.label = Pas cap d'àudio
+getUserMedia.shareSelectedDevices.label = Partejar lo periferic seleccionat;Partejar los periferics seleccionats
+getUserMedia.shareSelectedDevices.accesskey = P
+getUserMedia.always.label = Partejar totjorn
+getUserMedia.always.accesskey = t
+getUserMedia.denyRequest.label = Partejar pas
+getUserMedia.denyRequest.accesskey = t
+getUserMedia.never.label = Partejar pas jamai
+getUserMedia.never.accesskey = j
 getUserMedia.sharingCamera.message2 = Actualament, partejatz vòstra webcam amb aquesta pagina.
 getUserMedia.sharingMicrophone.message2 = Actualament, partejatz vòstra webcam amb aquesta pagina.
 getUserMedia.sharingCameraAndMicrophone.message2 = Actualament, partejatz vòstra webcam e vòstre microfòn amb aquesta pagina.
+getUserMedia.continueSharing.label = Contunhar lo partiment
+getUserMedia.continueSharing.accesskey = C
 getUserMedia.stopSharing.label = Arrestar lo partiment
 getUserMedia.stopSharing.accesskey = s
 
