--- a/browser/chrome/browser/devtools/webconsole.properties
+++ b/browser/chrome/browser/devtools/webconsole.properties
@@ -26,6 +26,8 @@ tipMutation=Activa o desactiva la jornalizacion dels eveniments de mutacion DOM
 btnGlobal=Messatges globals
 tipGlobal=Activa o desactiva la jornalizacion dels messatges globals
 localConsole=Consòla locala
+clearConsoleCmd.label=Voidar la consòla
+clearConsoleCmd.accesskey=o
 close.button=Tampar
 close.accesskey=T
 update.button=Metre a jorn
@@ -219,3 +221,4 @@ openNodeInInspector=Clicar per seleccionar lo nosèl dins l'inspector
 
 # LOCALIZATION NOTE (cdFunctionInvalidArgument): the text that is displayed when
 # cd() is invoked with an invalid argument.
+cdFunctionInvalidArgument=Impossible d'utilizar cd() dins la fenèstra donada. Argument invalid.
