--- a/browser/chrome/browser/places/places.properties
+++ b/browser/chrome/browser/places/places.properties
@@ -37,6 +37,16 @@ view.sortBy.1.date.label=Triat dempuèi la darrièra visita
 view.sortBy.1.date.accesskey=v
 view.sortBy.1.visitCount.label=Triar per nombre de visitas
 view.sortBy.1.visitCount.accesskey=n
+view.sortBy.1.keyword.label=Triar per mot clau
+view.sortBy.1.keyword.accesskey=c
+view.sortBy.1.description.label=Triar per descripcion
+view.sortBy.1.description.accesskey=d
+view.sortBy.1.dateAdded.label=Triada per data d'apondon
+view.sortBy.1.dateAdded.accesskey=e
+view.sortBy.1.lastModified.label=Triar per data de darrièra modificacion
+view.sortBy.1.lastModified.accesskey=m
+view.sortBy.1.tags.label=Triar per balisas
+view.sortBy.1.tags.accesskey=T
 
 searchBookmarks=Recercar dins los marcapaginas
 searchHistory=Recercar dins l'istoric
@@ -81,3 +91,5 @@ bookmarkResultLabel=Marcapaginas
 # %S will be replaced with the application name.
 lockPrompt.title=Error d'aviada del navigador
 lockPrompt.text=Los marcapaginas e l'istoric del sistèma foncionaràn pas per çò que un dels fichièrs de %S es utilizat per un autre programa. Lo problèma pòt venir d'un logicial de seguretat.
+lockPromptInfoButton.label=Ne saber mai
+lockPromptInfoButton.accessKey=N
