--- a/browser/chrome/browser/sitePermissions.properties
+++ b/browser/chrome/browser/sitePermissions.properties
@@ -11,6 +11,7 @@ permission.cookie.label = Definir de cookies
 permission.desktop-notification.label = Utilizar las notificacions
 permission.image.label = Cargar los imatges
 permission.camera.label = Utilizar la camèra
+permission.microphone.label = Utilizar lo microfòn
 permission.install.label = Installacion de modul
 permission.popup.label = Dobrir de fenèstras sorgissentas
 permission.geo.label = Accedir a vòstra posicion
