--- a/browser/chrome/overrides/appstrings.properties
+++ b/browser/chrome/overrides/appstrings.properties
@@ -5,6 +5,7 @@
 malformedURI=L'URL es pas valida e pòt pas èsser cargada.
 fileNotFound=Firefox pòt pas trobar lo fichièr a l'adreça %S.
 dnsNotFound=Firefox pòt pas trobar lo servidor a l'adreça %S.
+unknownProtocolFound=Firefox sap pas dobrir aquesta adreça perque un dels protocòls seguents (%S) es pas associat a cap de programa o es pas autorizat dins aqueste contèxte.
 connectionFailure=Firefox pòt pas establir cap de connexion amb lo servidor a l'adreça %S.
 netInterrupt=La connexion amb %S es estada interrompuda pendent lo cargament de la pagina.
 netTimeout=Lo servidor a l'adreça %S met tròp de temps a respondre.
