--- a/browser/metro/chrome/browser.properties
+++ b/browser/metro/chrome/browser.properties
@@ -40,11 +40,13 @@ contextAppbar2.clear=Anullar la seleccion
 clearPrivateData.clearButton=Netejar
 clearPrivateData.title2=Escafar mas traças
 # LOCALIZATION NOTE (clearPrivateData.message3): "Options" is the optionsCharm.
+clearPrivateData.message3=Las donadas personalas seleccionadas dins  « Opcions » seràn escafadas definitivament.
 
 # Settings Charms
 aboutCharm1=A prepaus
 optionsCharm=Opcions
 searchCharm=Recercar
+feedbackCharm=Vòstre vejaire (en linha)
 helpOnlineCharm=Ajuda (en linha)
 
 # General
@@ -136,3 +138,15 @@ opensearch.search.header=Recercar « %S » amb :
 # be displayed alongside of the button. The button when displayed is located
 # directly under the Firefox version in the about dialog (see bug 596813 for
 # screenshots).
+update.checkInsideButton.label=Recercar de mesas a jorn
+update.checkInsideButton.accesskey=c
+update.resumeButton.label=Contunhar lo telecargament de %S…
+update.resumeButton.accesskey=t
+update.openUpdateUI.applyButton.label=Aplicar la mesa a jorn...
+update.openUpdateUI.applyButton.accesskey=A
+update.restart.updateButton.label=Reaviar per aplicar la mesa a jorn
+update.restart.updateButton.accesskey=R
+update.openUpdateUI.upgradeButton.label=Metre a jorn ara…
+update.openUpdateUI.upgradeButton.accesskey=M
+update.restart.upgradeButton.label=Metre a jorn ara
+update.restart.upgradeButton.accesskey=M
