--- a/dom/chrome/layout/layout_errors.properties
+++ b/dom/chrome/layout/layout_errors.properties
@@ -8,3 +8,4 @@ ImageMapCircleNegativeRadius=L'atribut « coords » de la balisa <area shape="
 ImageMapPolyWrongNumberOfCoords=L'atribut « coords » de la balisa <area shape="poly"> es pas al format « x1,y1,x2,y2 … ».
 ImageMapPolyOddNumberOfCoords=L'atribut « coords » de la balisa <area shape="poly"> conten pas la darrièra coordenada « y » (lo format corrècte es u00ab x1,y1,x2,y2 … »).
 
+TablePartRelPosWarning=Lo posicionament relatiu de las linhas de tablèu e dels gropes de linhas es d'ara enlà pres en carga. Aqueste site pòt aver besonh d'èsser mes a jorn se repausa sul fach qu'aquesta foncionalitat a pas cap d'efièch.
