--- a/toolkit/chrome/global/charsetMenu.properties
+++ b/toolkit/chrome/global/charsetMenu.properties
@@ -31,9 +31,13 @@
 charsetMenuCharsets = Encodatge de caractèr
 charsetMenuAutodet = Deteccion automatica
 # 'A' is reserved for Arabic:
+charsetMenuAutodet.key = D
 charsetMenuAutodet.off = (desactivada)
+charsetMenuAutodet.off.key = s
 charsetMenuAutodet.ja = Japonés
+charsetMenuAutodet.ja.key = J
 charsetMenuAutodet.ru = Rus
+charsetMenuAutodet.ru.key = R
 charsetMenuAutodet.uk = Ucraïnian
 charsetMenuAutodet.uk.key = U
 
