--- a/toolkit/chrome/mozapps/plugins/plugins.properties
+++ b/toolkit/chrome/mozapps/plugins/plugins.properties
@@ -24,3 +24,7 @@ pluginInstallation.noPluginsFound=Cap de plugin apropriat es pas estat trobat.
 pluginInstallation.noPluginsInstalled=Cap de plugin es estat installat.
 pluginInstallation.unknownPlugin=Lo plugin (%S) es desconegut.
 
+pluginInstallation.restart.label=Tornar aviar %S
+pluginInstallation.restart.accesskey=r
+pluginInstallation.close.label=Tampar
+pluginInstallation.close.accesskey=T
