--- a/browser/chrome/browser/devtools/debugger.properties
+++ b/browser/chrome/browser/devtools/debugger.properties
@@ -79,6 +79,7 @@ noSourcesText=Aquesta pagina a pas cap de font.
 
 # LOCALIZATION NOTE (loadingSourcesText): The text to display in the sources menu
 # when waiting for scripts to load.
+loadingSourcesText=En espèra de las fonts…
 
 # LOCALIZATION NOTE (noEventListenersText): The text to display in the events tab
 # when there are no events.
