--- a/browser/chrome/browser/devtools/gcli.properties
+++ b/browser/chrome/browser/devtools/gcli.properties
@@ -54,6 +54,7 @@ cliOptions=Opcions disponiblas
 cliUnknownCommand=Comanda invalida
 
 # LOCALIZATION NOTE: A parameter should have a value, but doesn't
+cliIncompleteParam=Valor necessària per « %1$S ».
 
 # LOCALIZATION NOTE: Error message given when a file argument points to a file
 # that does not exist, but should (e.g. for use with File->Open) %1$S is a
@@ -216,6 +217,8 @@ contextEmptyReply=Cap de prefixe de comanda es pas definit
 connectDesc=Importar las comandas del servidor
 connectManual=Se connectar al servidor, crear una version locala de las comandas sul servidor. Las comandas distantas possedisson per defaut un prefixe per las diferenciar de las comandas localas — veire la comanda context per contornar l'utilizacion del prefixe.
 connectPrefixDesc=Lo prefixe parent per las comandas importadas
+connectMethodDesc=Lo metòde de connexion
+connectUrlDesc=L'URL a la quala se cal connectar
 connectDupReply=Una connexion nomenada %S existís ja.
 
 # LOCALIZATION NOTE: The output of the 'connect' command, telling the user
@@ -244,13 +247,17 @@ disconnectOutstanding=Requèstas en cors (%S)
 
 # LOCALIZATION NOTE (globalDesc, globalWindowDesc, globalOutput): These
 # strings describe the 'global' command and its parameters
+globalDesc=Modificar lo global JS
 globalWindowDesc=Lo novèl window/global
 globalOutput=Lo global JS es ara %S
 
 # LOCALIZATION NOTE: These strings describe the 'clear' command
+clearDesc=Voidar la zòna de sortida
 
 # LOCALIZATION NOTE (langDesc, langOutput): These strings describe the 'lang'
 # command and its parameters
+langDesc=Seleccionar la lenga de picada de las comandas
+langOutput=Lenga actuala : %S
 
 # LOCALIZATION NOTE (prefDesc, prefManual, prefListDesc, prefListManual,
 # prefListSearchDesc, prefListSearchManual, prefShowDesc, prefShowManual,
@@ -317,6 +324,7 @@ introManual=Aficha lo messatge afichat als novèls utilizaires fins al moment qu
 # introTextF1Escape, introTextGo): These strings are displayed when the user
 # first opens the developer toolbar to explain the command line, and is shown
 # each time it is opened until the user clicks the 'Got it!' button.
+introTextOpening3=GCLI es una experiéncia que la tòca n'es de crear una linha de comanda de fòrt bon utilizar pels desvolopaires web.
 introTextCommands=Per una lista de comandas, picatz
 introTextKeys2=o per afichar/amagar las informacions sus las comandas, quichar sus
 introTextF1Escape=F1/Escap
