--- a/browser/chrome/browser/devtools/netmonitor.properties
+++ b/browser/chrome/browser/devtools/netmonitor.properties
@@ -76,6 +76,7 @@ requestHeaders=Entèstas de la requèsta
 # LOCALIZATION NOTE (requestHeadersFromUpload): This is the label displayed
 # in the network details headers tab identifying the request headers from
 # the upload stream of a POST request's body.
+requestHeadersFromUpload=Entèstas de la requèsta del flux de telecargament
 
 # LOCALIZATION NOTE (responseHeaders): This is the label displayed
 # in the network details headers tab identifying the response headers.
@@ -174,6 +175,7 @@ charts.totalSize=Talha : %S KB
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # This is the label displayed in the performance analysis view for the
 # total requests time, in seconds.
+charts.totalSeconds=Durada : #1 segonda;Durada : #1 segondas
 
 # LOCALIZATION NOTE (charts.totalCached): This is the label displayed
 # in the performance analysis view for total cached responses.
