--- a/dom/chrome/security/security.properties
+++ b/dom/chrome/security/security.properties
@@ -11,7 +11,12 @@ OldCSPHeaderDeprecated=Las entèstas « X-Content-Security-Policy » e « X-C
 BothCSPHeadersPresent=Aqueste site a especificat a l'encòp una entèsta « X-Content-Security-Policy/Report-Only » e una entèsta « Content-Security-Policy/Report-Only ». L'entèsta « X-Content-Security-Policy/Report-Only » serà ignorada.
 
 # CORS
+CrossSiteRequestBlocked=Una demanda multioriginas (Cross-Origin Request) es estada blocada : la politica « Same Origin » permet pas de consultar la ressorsa distanta situada sus %1$S. Aquò pòt èsser corregit en desplaçant la ressorsa sul meteis domeni o en activant CORS.
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
+InvalidSTSHeaders=Lo site a especificat una entèsta Strict-Transport-Security invalida.
+InsecurePasswordsPresentOnPage=Camps senhal presents sus una pagina pas securizada (http://). Aquò representa un risc de seguretat que permet lo raubatòri d'identificants de connexion.
+InsecureFormActionPasswordsPresent=Camps senhal presents dins un formulari que possedís una accion de formulari pas securizada (http://). Aquò representa un risc de seguretat que permet lo raubatòri d'identificants de connexion.
+InsecurePasswordsPresentOnIframe=Camps senhal presents dins una iframe pas securizada (http://). Aquò representa un risc de seguretat que permet lo raubatòri d'identificants de connexion.
 LoadingMixedActiveContent=Cargament de contengut mixte actiu (pas securizat) sus una pagina securizada « %1$S »
 LoadingMixedDisplayContent=Cargament de contengut mixte non actiu (pas securizat) sus una pagina securizada « %1$S »
