--- a/toolkit/chrome/global/aboutTelemetry.properties
+++ b/toolkit/chrome/global/aboutTelemetry.properties
@@ -48,8 +48,10 @@ keysHeader = Proprietat
 
 valuesHeader = Valor
 
+addonTableID = Identificant del modul
 
 addonTableDetails = Detalhs
 
 # Note to translators:
 # - The %1$S will be replaced with the name of an Add-on Provider (e.g. "XPI", "Plugin")
+addonProvider = Editor %1$S
