--- a/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -115,9 +115,12 @@ showAllSearchResults=Afichar un resultat;Afichar los #1 resultats
 
 #LOCALIZATION NOTE (addon.purchase.label) displayed on a button in the list
 # view, %S is the price of the add-on including currency symbol
+addon.purchase.label=Crompar per %S…
 addon.purchase.tooltip=Visitar la galariá dels moduls complementaris per crompar aqueste modul
 #LOCALIZATION NOTE (cmd.purchaseAddon.label) displayed on a button in the detail
 # view, %S is the price of the add-on including currency symbol
+cmd.purchaseAddon.label=Crompar per %S…
+cmd.purchaseAddon.accesskey=o
 
 #LOCALIZATION NOTE (eulaHeader) %S is name of the add-on asking the user to agree to the EULA
 eulaHeader=%S necessita qu'acceptietz l'acòrdi de licéncia d'utilizaire seguent abans de procedir a l'installacion :
