[oc] update from Pootle (firefox)

--- a/dom/chrome/dom/dom.properties
+++ b/dom/chrome/dom/dom.properties
@@ -50,6 +50,7 @@ RemoveAttributeNodeWarning=L'utilizacion de removeAttributeNode() es obsolèta. 
 CreateAttributeWarning=L'utilizacion de document.createAttribute() es obsolèta. Utilizatz element.setAttribute() a la plaça.
 CreateAttributeNSWarning=L'utilizacion de document.createAttributeNS() es obsolèta. Utilizatz element.setAttributeNS() a la plaça.
 SpecifiedWarning=L'utilizacion de l'atribut « specified » es obsolèta. Aquò renvia totjorn « true ».
+OwnerElementWarning=L'utilizacion de l'atribut « ownerElement » d'un atribut es obsolèta.
 NodeValueWarning=L'utilizacion de l'atribut « nodeValue » d'un atribut es obsolèta. Utilizatz « value » a la plaça.
 TextContentWarning=L'utilizacion de l'atribut « textContent » d'un atribut es obsolèta. Utilizatz « value » a la plaça.
 EnablePrivilegeWarning=L'utilizacion de « enablePrivilege » es obsolèta. Utilizatz puslèu lo còde que s'executa al meteis nivèl que lo processus principal (per ex. una extension).
