[oc] update from Pootle (mobile)

--- a/mobile/android/chrome/browser.properties
+++ b/mobile/android/chrome/browser.properties
@@ -131,6 +131,7 @@ indexedDBQuota.wantsTo=%S vòl emmagazinar fòrça donadas sus vòstre aparelh p
 password.savePassword=Enregistrar lo senhal
 # LOCALIZATION NOTE (password.save): This should match
 # saveButton in passwordmgr.properties
+password.save=Enregistrar
 # LOCALIZATION NOTE (password.dontSave): This should match
 # dontSaveButton in passwordmgr.properties
 password.dontSave=Enregistrar pas
@@ -284,3 +285,4 @@ openInApp.pageAction = Dobrir amb l'aplicacion
 openInApp.ok = D'acòrdi
 openInApp.cancel = Anullar
 
+#Tabs in context menus
