--- a/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -86,7 +86,9 @@ paste-button.tooltiptext2 = Pegar (%S)
 feed-button.label = S'inscriure
 feed-button.tooltiptext = S'abonar a aquesta pagina…
 
-characterencoding-button.label = Encodatge de caractèr
+# LOCALIZATION NOTE (characterencoding-button.label): The \u00ad character at the beginning
+# of the string is used to disable auto hyphenation on the button text when it is displayed
+# in the menu panel.
 characterencoding-button.tooltiptext2 = Afichar las opcions d'encodatge de caractèrs
 
 email-link-button.label = Madar per corrièr electronic un ligam cap a la pagina…
