--- a/browser/metro/chrome/browser.properties
+++ b/browser/metro/chrome/browser.properties
@@ -82,7 +82,7 @@ alertDownloadSave2=Volètz dobrir o enregistrar #1 (#2) dempuèi #3 ?
 # LOCALIZATION NOTE (alertDownloadMultiple): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of files, #2 is (amount downloaded so far / total amount to download) and #3 is seconds remaining
-alertDownloadMultiple=Telecargament d&#39;un fichièr, #2, #3;Telecargament de #1 fichièrs, #2, #3
+alertDownloadMultiple=Telecargament d’un fichièr, #2, #3;Telecargament de #1 fichièrs, #2, #3
 # LOCALIZATION NOTE (alertMultipleDownloadsComplete): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of downloads completed
