--- a/dom/chrome/accessibility/AccessFu.properties
+++ b/dom/chrome/accessibility/AccessFu.properties
@@ -156,6 +156,8 @@ tabReload      =      recargament
 # Object states
 stateChecked     =    marcat
 stateNotChecked  =    pas marcat
+statePressed     =    quichat
+# No string for a not pressed toggle button
 stateExpanded    =    desvolopat
 stateCollapsed   =    reduch
 stateUnavailable =    indisponible
