--- a/dom/chrome/dom/dom.properties
+++ b/dom/chrome/dom/dom.properties
@@ -49,7 +49,6 @@ SetAttributeNodeNSWarning=L'utilizacion de setAttributeNodeNS() es obsolèta. Ut
 RemoveAttributeNodeWarning=L'utilizacion de removeAttributeNode() es obsolèta. Utilizatz removeAttribute() a la plaça.
 CreateAttributeWarning=L'utilizacion de document.createAttribute() es obsolèta. Utilizatz element.setAttribute() a la plaça.
 CreateAttributeNSWarning=L'utilizacion de document.createAttributeNS() es obsolèta. Utilizatz element.setAttributeNS() a la plaça.
-SpecifiedWarning=L'utilizacion de l'atribut « specified » es obsolèta. Aquò renvia totjorn « true ».
 OwnerElementWarning=L'utilizacion de l'atribut « ownerElement » d'un atribut es obsolèta.
 NodeValueWarning=L'utilizacion de l'atribut « nodeValue » d'un atribut es obsolèta. Utilizatz « value » a la plaça.
 TextContentWarning=L'utilizacion de l'atribut « textContent » d'un atribut es obsolèta. Utilizatz « value » a la plaça.
@@ -121,8 +120,6 @@ PluginHangUIStopButton=Arrestar lo plugin
 PrefixedVisibilityApiWarning=Las proprietats « mozHidden » e « mozVisibilityState » son obsolètas. Utilizatz las proprietats non prefixadas « hidden » e « visibilityState » a la plaça.
 # LOCALIZATION NOTE: Do not translate "NodeIterator" or "detach()".
 NodeIteratorDetachWarning=Apelar detach() sus un NodeIterator a pas mai cap d'efièch.
-# LOCALIZATION NOTE: Do not translate "Mozilla Audio Data API" and "Web Audio API".
-MozAudioDataWarning=L'utilizacion de Mozilla Audio Data API es obsolèta.  Utilizatz Web Audio API a la plaça.
 # LOCALIZATION NOTE: Do not translate "LenientThis" and "this"
 LenientThisWarning=Obtencion o definicion de las proprietats que possedisson [LenientThis] ignoradas perque l'objècte « this » es incorrècte.
 # LOCALIZATION NOTE: Do not translate "nsIDOMWindowUtils", "getWindowWithOuterId", or "nsIWindowMediator"
@@ -146,3 +143,7 @@ Window_ContentWarning=« window._content » es obsolèt.  Utilizatz « window.co
 # LOCALIZATION NOTE: Do not translate "XMLHttpRequest"
 SyncXMLHttpRequestWarning=L'utilizacion d'XMLHttpRequest de faiçon sincròna sul fial d'execucion principal es obsolèta a causa de son impacte negatiu sus la navigacion de l'utilizaire final. Consultatz http://xhr.spec.whatwg.org/ per mai d'informacions.
 ImplicitMetaViewportTagFallback=Cap de balisa meta-viewport pas trobada. Especificatz-ne una de faiçon explicita per empachar tot cambiament de comportament pas volgut provocat per de versions futuras. Consultatz https://developer.mozilla.org/fr/docs/Mozilla/Mobile/Balise_meta_viewport per mai d'informacions.
+# LOCALIZATION NOTE: Do not translate "DataContainerEvent" or "CustomEvent"
+DataContainerEventWarning=L'utilizacion de DataContainerEvent es depreciada. Utilizatz CustomEvent a la plaça.
+# LOCALIZATION NOTE: Do not translate "sendAsBinary" or "send(Blob data)"
+SendAsBinaryWarning=La metòde non estandard sendAsBinary es obsolèt e serà lèu levat. Utilizar lo metòde estandard send(Blob data) a la plaça.
