--- a/browser/chrome/browser/devtools/gclicommands.properties
+++ b/browser/chrome/browser/devtools/gclicommands.properties
@@ -164,6 +164,17 @@ inspectNodeDesc=Selector CSS
 # on what it does.
 inspectNodeManual=Un selector CSS d'utilizar amb document.querySelector e qu'identifica un element unic
 
+# LOCALIZATION NOTE (eyedropperDesc) A very short description of the 'eyedropper'
+# command. See eyedropperManual for a fuller description of what it does. This
+# string is designed to be shown in a menu alongside the command name, which
+# is why it should be as short as possible.
+
+# LOCALIZATION NOTE (eyedropperManual) A fuller description of the 'eyedropper'
+# command, displayed when the user asks for help on what it does.
+
+# LOCALIZATION NOTE (eyedropperTooltip) A string displayed as the
+# tooltip of button in devtools toolbox which toggles the Eyedropper tool.
+
 # LOCALIZATION NOTE (tiltDesc) A very short description of the 'tilt'
 # command. See tiltManual for a fuller description of what it does. This
 # string is designed to be shown in a menu alongside the command name, which
@@ -561,10 +572,8 @@ cmdDesc=Manipular las comandas
 # name, which is why it should be as short as possible.
 cmdRefreshDesc=Tornar legir lo dorsièr mozcmd
 
-# LOCALIZATION NOTE (cmdStatus) When the we load new commands from mozcmd
-# directory, we report on how many we loaded. %1$S is a count of the number
-# of loaded commands, and %2$S is the directory we loaded from.
-cmdStatus=Legir las comandas %1$S dempuèi « %2$S »
+# LOCALIZATION NOTE (cmdStatus2) When the we load new commands from mozcmd
+# directory, we report where we loaded from using %1$S.
 
 # LOCALIZATION NOTE (cmdSetdirDesc) 
 cmdSetdirDesc=Tornar legir lo dorsièr mozcmd
