--- a/browser/installer/nsisstrings.properties
+++ b/browser/installer/nsisstrings.properties
@@ -46,16 +46,13 @@ ADD_CheckboxShortcutInStartMenu=Dins lo dorsièr « &Programas » del menú «
 ADD_CheckboxShortcutOnDesktop=Sul « &Burèu »
 SPACE_REQUIRED=Espaci de disc requesit :
 SPACE_AVAILABLE=Espaci de disc disponible : 
-ONE_MOMENT=Un moment, $BrandShortName s'aviarà tre que l'installacion serà acabada…
+ONE_MOMENT_INSTALL=Un moment, $BrandShortName s'aviarà tre que l'installacion serà acabada…
 INSTALL_MAINT_SERVICE=I&nstallar lo servici de mesa a jorn en rèire plan de $BrandShortName
 SEND_PING=M&andar informacion sus aquela installacion a Mozilla
 BROWSE_BUTTON=Pe&rcórrer...
 DEST_FOLDER=Dorsièr de destinacion
 
-DOWNLOADING_IN_PROGRESS=Telecargament en cors…
-DOWNLOADING_DONE=Telecargat
-INSTALLING_TO_BE_DONE=Installacion
-INSTALLING_IN_PROGRESS=Installacion en cors…
+INSTALLING_LABEL=Installacion de $BrandShortName…
 
 SELECT_FOLDER_TEXT=Seleccionatz lo dorsièr dins lo qual cal installar $BrandShortName.
 
