[oc] update from Pootle (firefox)

--- a/browser/chrome/browser/devtools/gcli.properties
+++ b/browser/chrome/browser/devtools/gcli.properties
@@ -59,6 +59,7 @@ cliIncompleteParam=Valor necessària per « %1$S ».
 # LOCALIZATION NOTE: Error message given when a file argument points to a file
 # that does not exist, but should (e.g. for use with File->Open) %1$S is a
 # filename
+fileErrNotExists=« %1$S » existís pas
 
 # LOCALIZATION NOTE: Error message given when a file argument points to a file
 # that exists, but should not (e.g. for use with File->Save As) %1$S is a
@@ -178,6 +179,7 @@ helpListNone=Pas las comandas que començan per '%S'
 # they have a default value.
 helpManRequired=requesit
 helpManOptional=Opcional
+helpManDefault=opcional, defaut=%1$S
 
 # LOCALIZATION NOTE: Text shown as part of the output of the 'help' command
 # when the command in question has sub-commands, before a list of the matching
@@ -203,6 +205,7 @@ contextNotParentError=Impossible d'utilizar « %S » coma prefixe de comanda per
 # LOCALIZATION NOTE (contextReply, contextEmptyReply): These messages are
 # displayed during the processing of the 'context' command, to indicate
 # success or that there is no command prefix.
+contextReply=%1$S es d'ara enlà utilizat coma prefixe de comanda
 contextEmptyReply=Cap de prefixe de comanda es pas definit
 
 # LOCALIZATION NOTE (connectDesc, connectManual, connectPrefixDesc,
