--- a/browser/chrome/browser/devtools/gclicommands.properties
+++ b/browser/chrome/browser/devtools/gclicommands.properties
@@ -72,6 +72,7 @@ screenshotChromeDesc2=Capturar lo chrome de %1$S ? (true/false)
 # 'chrome' parameter to the 'screenshot' command, displayed when the user
 # asks for help on what it does.
 # The argument (%1$S) is the browser name.
+screenshotChromeManual2=True se volètz prene una captura de la fenèstra de %1$S puslèu que de contengut de la pagina web.
 
 # LOCALIZATION NOTE (screenshotGroupOptions) A label for the optional options of
 # the screenshot command.
@@ -168,12 +169,15 @@ inspectNodeManual=Un selector CSS d'utilizar amb document.querySelector e qu'ide
 # command. See eyedropperManual for a fuller description of what it does. This
 # string is designed to be shown in a menu alongside the command name, which
 # is why it should be as short as possible.
+eyedropperDesc=Seleccionar una color dempuèi la pagina
 
 # LOCALIZATION NOTE (eyedropperManual) A fuller description of the 'eyedropper'
 # command, displayed when the user asks for help on what it does.
+eyedropperManual=Dobrís un panèl que met en valor una zòna de la pagina per tal d'inspectar los pixèls e de copiar los còdes colors
 
 # LOCALIZATION NOTE (eyedropperTooltip) A string displayed as the
 # tooltip of button in devtools toolbox which toggles the Eyedropper tool.
+eyedropperTooltip=Seleccionar una color dempuèi la pagina
 
 # LOCALIZATION NOTE (tiltDesc) A very short description of the 'tilt'
 # command. See tiltManual for a fuller description of what it does. This
@@ -574,6 +578,7 @@ cmdRefreshDesc=Tornar legir lo dorsièr mozcmd
 
 # LOCALIZATION NOTE (cmdStatus2) When the we load new commands from mozcmd
 # directory, we report where we loaded from using %1$S.
+cmdStatus2=Legir las comandas dempuèi « %1$S »
 
 # LOCALIZATION NOTE (cmdSetdirDesc) 
 cmdSetdirDesc=Tornar legir lo dorsièr mozcmd
@@ -666,6 +671,7 @@ addonDisableDesc=Desactivar lo modul complementari especificat
 # LOCALIZATION NOTE (addonAlreadyDisabled) Used in the output of the
 # 'addon disable' command when an attempt is made to disable an add-on that is
 # already disabled.
+addonAlreadyDisabled=%S es ja desactivat.
 
 # LOCALIZATION NOTE (addonDisabled) Used in the output of the 'addon disable'
 # command when an add-on is disabled.
@@ -1103,7 +1109,7 @@ calllogStopReply=L'istoric dels apèls es estat arrestat. Contèxtes actius : %
 # LOCALIZATION NOTE (calllogStartChromeDesc) A very short description of the
 # 'calllog chromestart' command. This string is designed to be shown in a menu
 # alongside the command name, which is why it should be as short as possible.
-calllogChromeStartDesc=Aviar dins la consòla l'istoric dels apèls de foncions pel còde del chrome 
+calllogChromeStartDesc=Aviar dins la consòla l'istoric dels apèls de foncions pel còde del chrome\u0020
 
 # LOCALIZATION NOTE (calllogChromeSourceTypeDesc) A very short description of the
 # 'calllog chromestart <sourceType>' parameter. This string is designed to be
@@ -1180,7 +1186,7 @@ paintflashingOnDesc=Activar la mesa en susbrilhança de las zònas repintradas
 
 # LOCALIZATION NOTE (paintflashingOffDesc) A very short string used to describe the
 # function of the "paintflashing off" command.
-paintflashingOffDesc=Desactivar la mesa en susbrilhança de las zònas repintradas 
+paintflashingOffDesc=Desactivar la mesa en susbrilhança de las zònas repintradas\u0020
 
 # LOCALIZATION NOTE (paintflashingChrome) A very short string used to describe the
 # function of the "paintflashing on/off chrome" command.
