--- a/browser/chrome/browser/devtools/netmonitor.properties
+++ b/browser/chrome/browser/devtools/netmonitor.properties
@@ -149,6 +149,7 @@ pieChart.loading=Cargament
 # LOCALIZATION NOTE (pieChart.unavailable): This is the label displayed
 # for pie charts (e.g., in the performance analysis view) when there is
 # no data available, even after loading it.
+pieChart.unavailable=Void
 
 # LOCALIZATION NOTE (tableChart.loading): This is the label displayed
 # for table charts (e.g., in the performance analysis view) when there is
@@ -158,6 +159,7 @@ tableChart.loading=Esperatz...
 # LOCALIZATION NOTE (tableChart.unavailable): This is the label displayed
 # for table charts (e.g., in the performance analysis view) when there is
 # no data available, even after loading it.
+tableChart.unavailable=Cap de donada pas disponibla
 
 # LOCALIZATION NOTE (charts.sizeKB): This is the label displayed
 # in pie or table charts specifying the size of a request (in kilobytes).
