--- a/browser/chrome/browser/newTab.properties
+++ b/browser/chrome/browser/newTab.properties
@@ -7,3 +7,4 @@ newtab.unpin=Daissar anar aqueste site
 newtab.block=Suprimir aqueste site
 newtab.show=Afichar la pagina « Onglet novèl »
 newtab.hide=Amagar la pagina « Onglet novèl »
+newtab.sponsored=Afichar d'informacions suls teules pairinats
