--- a/browser/chrome/browser/preferences/preferences.properties
+++ b/browser/chrome/browser/preferences/preferences.properties
@@ -114,6 +114,7 @@ offlinepermissionstitle=Donadas sens connexion
 #   %1$S = size
 #   %2$S = unit (MB, KB, etc.)
 actualDiskCacheSize=Lo contengut Web en escondedor utiliza actualament %1$S %2$S d'espaci de disc
+actualDiskCacheSizeCalculated=Calcul de la talha del contengut web en escondedor…
 
 ####Preferences::Advanced::Network
 #LOCALIZATION NOTE: The next string is for the disk usage of the application cache.
