--- a/browser/installer/nsisstrings.properties
+++ b/browser/installer/nsisstrings.properties
@@ -45,14 +45,17 @@ ADD_SC_QUICKLAUNCHBAR=Dins la barra « A&viada rapida »
 ADD_CheckboxShortcutInStartMenu=Dins lo dorsièr « &Programas » del menú « Amodar »
 ADD_CheckboxShortcutOnDesktop=Sul « &Burèu »
 SPACE_REQUIRED=Espaci de disc requesit :
-SPACE_AVAILABLE=Espaci de disc disponible : 
+SPACE_AVAILABLE=Espaci de disc disponible :\u00A0
 ONE_MOMENT_INSTALL=Un moment, $BrandShortName s'aviarà tre que l'installacion serà acabada…
+ONE_MOMENT_UPGRADE=Un moment, $BrandShortName s'aviarà tre que l'installacion serà acabada…
 INSTALL_MAINT_SERVICE=I&nstallar lo servici de mesa a jorn en rèire plan de $BrandShortName
 SEND_PING=M&andar informacion sus aquela installacion a Mozilla
 BROWSE_BUTTON=Pe&rcórrer...
 DEST_FOLDER=Dorsièr de destinacion
 
+DOWNLOADING_LABEL=Telecargament de &brandShortName;
 INSTALLING_LABEL=Installacion de $BrandShortName…
+UPGRADING_LABEL=Installacion de $BrandShortName…
 
 SELECT_FOLDER_TEXT=Seleccionatz lo dorsièr dins lo qual cal installar $BrandShortName.
 
