--- a/dom/chrome/dom/dom.properties
+++ b/dom/chrome/dom/dom.properties
@@ -146,4 +146,5 @@ ImplicitMetaViewportTagFallback=Cap de balisa meta-viewport pas trobada. Especif
 # LOCALIZATION NOTE: Do not translate "DataContainerEvent" or "CustomEvent"
 DataContainerEventWarning=L'utilizacion de DataContainerEvent es depreciada. Utilizatz CustomEvent a la plaça.
 # LOCALIZATION NOTE: Do not translate "sendAsBinary" or "send(Blob data)"
-SendAsBinaryWarning=La metòde non estandard sendAsBinary es obsolèt e serà lèu levat. Utilizar lo metòde estandard send(Blob data) a la plaça.
+SendAsBinaryWarning=Lo metòde non estandard sendAsBinary es obsolèt e serà lèu levat. Utilizar lo metòde estandard send(Blob data) a la plaça.
+# LOCALIZATION NOTE: Do not translate "window.controllers"
