--- a/dom/chrome/plugins.properties
+++ b/dom/chrome/plugins.properties
@@ -9,7 +9,7 @@
 title_label=A prepaus dels moduls
 installedplugins_label=Plugins activats
 nopluginsareinstalled_label=Cap de plugin activat pas trobat
-findpluginupdates_label=Trobaretz de mesas a jorn pels plugins installats sus 
+findpluginupdates_label=Trobaretz de mesas a jorn pels plugins installats sus\u0020
 file_label=Fichièr :
 path_label=Camin :
 version_label=Version :
