--- a/toolkit/chrome/global/aboutSupport.properties
+++ b/toolkit/chrome/global/aboutSupport.properties
@@ -68,8 +68,8 @@ adapterDrivers = Pilòts de la carta
 adapterRAM = RAM de la carta
 driverVersion = Version del pilòt
 driverDate = Data del pilòt
-adapterDescription2 = Descripcion de la carta (GPU #2) 
-adapterVendorID2 = ID del vendeire (GPU #2) 
+adapterDescription2 = Descripcion de la carta (GPU #2)\u0020
+adapterVendorID2 = ID del vendeire (GPU #2)\u0020
 adapterDeviceID2 = ID del periferic (GPU #2)
 adapterDrivers2 = Pilòt de la carta (GPU #2)
 adapterRAM2 = RAM de la carta (GPU #2)
