--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -325,7 +325,7 @@ webNotifications.showForSession=Afichar per aquesta sesilha
 webNotifications.showForSession.accesskey=s
 webNotifications.alwaysShow=Afichar totjorn las notificacions
 webNotifications.alwaysShow.accesskey=A
-webNotifications.neverShow=Blocar totjorn las notificacions 
+webNotifications.neverShow=Blocar totjorn las notificacions\u0020
 webNotifications.neverShow.accesskey=N
 webNotifications.showFromSite=Volètz afichar las notificacions dempuèi %S ?
 
@@ -396,22 +396,22 @@ browser.menu.showCharacterEncoding=fals
 # LOCALIZATION NOTE (syncPromoNotification.bookmarks.label): This appears in
 # the add bookmark star panel.  %S will be replaced by syncBrandShortName.
 # The final space separates this text from the Learn More link.
-syncPromoNotification.bookmarks.description=Podètz accedir a vòstres marcapaginas sus totes vòstres aparelhs gràcias a %S. 
+syncPromoNotification.bookmarks.description=Podètz accedir a vòstres marcapaginas sus totes vòstres aparelhs gràcias a %S.\u0020
 # LOCALIZATION NOTE (syncPromoNotification.passwords.label): This appears in
 # the remember password panel.  %S will be replaced by syncBrandShortName.
 # The final space separates this text from the Learn More link.
-syncPromoNotification.passwords.description=Podètz accedir a vòstres senhals sus totes vòstres aparelhs gràcias a %S. 
+syncPromoNotification.passwords.description=Podètz accedir a vòstres senhals sus totes vòstres aparelhs gràcias a %S.\u0020
 syncPromoNotification.learnMoreLinkText=Ne saber mai
 # LOCALIZATION NOTE (syncPromoNotification.addons.label): This appears in
 # the add-on install complete panel when Sync isn't set.
 # %S will be replaced by syncBrandShortName.
 # The final space separates this text from the Learn More link.
-syncPromoNotification.addons.description=Podètz accedir a vòstres moduls complementaris sus totes vòstres aparelhs gràcias a %S. 
+syncPromoNotification.addons.description=Podètz accedir a vòstres moduls complementaris sus totes vòstres aparelhs gràcias a %S.\u0020
 # LOCALIZATION NOTE (syncPromoNotification.addons-sync-disabled.label):
 # This appears in the add-on install complete panel when Sync is set
 # but addons sync is not. %S will be replaced by syncBrandShortName.
 # The final space separates this text from the Learn More link.
-syncPromoNotification.addons-sync-disabled.description=Podètz utilizar vòstre compte %S per sincronizar vòstres moduls complementaris amb d'aparelhs multiples. 
+syncPromoNotification.addons-sync-disabled.description=Podètz utilizar vòstre compte %S per sincronizar vòstres moduls complementaris amb d'aparelhs multiples.\u0020
 
 # Mozilla data reporting notification (Telemetry, Firefox Health Report, etc)
 dataReportingNotification.message       = %1$S manda automaticament d'unas informacions a %2$S per tal que poscam melhorar vòstra experiéncia.
