--- a/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -12,30 +12,41 @@ privatebrowsing-button.tooltiptext = Novèla fenèstra de navigacion privada (%S
 
 save-page-button.label = Enregistrar la pagina
 # LOCALIZATION NOTE(save-page-button.tooltiptext3): %S is the keyboard shortcut
+save-page-button.tooltiptext3 = Enregistrar aquesta pagina (%S)
 
 find-button.label = Recercar
 # LOCALIZATION NOTE(find-button.tooltiptext3): %S is the keyboard shortcut.
+find-button.tooltiptext3 = Recercar dins aquesta pagina (%S)
 
 open-file-button.label = Dobrir lo fichièr
 # LOCALIZATION NOTE (open-file-button.tooltiptext3): %S is the keyboard shortcut.
+open-file-button.tooltiptext3 = Dobrir un fichièr (%S)
 
 developer-button.label = Desvolopaire
 # LOCALIZATION NOTE(developer-button.tooltiptext): %S is the keyboard shortcut
+developer-button.tooltiptext2 = Aisinas de desvolopament web (%S)
 
 sidebar-button.label = Panèl lateral
+sidebar-button.tooltiptext2 = Afichar los panèls laterals
 
 add-ons-button.label = Moduls complementaris
 # LOCALIZATION NOTE(add-ons-button.tooltiptext3): %S is the keyboard shortcut
+add-ons-button.tooltiptext3 = Gerir los moduls complementaris (%S)
 
 switch-to-metro-button2.label = Windows 8 tactil
 # LOCALIZATION NOTE(switch-to-metro-button2.tooltiptext): %S is the brand short name
 switch-to-metro-button2.tooltiptext = Tornar dobrir amb %S per Windows 8 tactil
 
 preferences-button.label = Preferéncias
+preferences-button.tooltiptext2 = Dobrir las preferéncias
+preferences-button.tooltiptext.withshortcut = Dobrir las preferéncias (%S)
 # LOCALIZATION NOTE (preferences-button.labelWin): Windows-only label for Options
 preferences-button.labelWin = Opcions
 # LOCALIZATION NOTE (preferences-button.tooltipWin): Windows-only tooltip for Options
+preferences-button.tooltipWin2 = Dobrir las opcions
 
+zoom-controls.label = Nivèl de zoom
+zoom-controls.tooltiptext2 = Nivèl de zoom
 
 zoom-out-button.label = Zoom arrièr
 # LOCALIZATION NOTE(zoom-out-button.tooltiptext2): %S is the keyboard shortcut.
@@ -52,6 +63,8 @@ zoom-in-button.label = Zoom avant
 # LOCALIZATION NOTE(zoom-in-button.tooltiptext2): %S is the keyboard shortcut.
 zoom-in-button.tooltiptext2 = Zoom avant (%S)
 
+edit-controls.label = Contraròtles d'edicion
+edit-controls.tooltiptext2 = Contraròtles d'edicion
 
 cut-button.label = Talhar
 # LOCALIZATION NOTE(cut-button.tooltiptext2): %S is the keyboard shortcut.
@@ -66,12 +79,16 @@ paste-button.label = Pegar
 paste-button.tooltiptext2 = Pegar (%S)
 
 feed-button.label = S'inscriure
+feed-button.tooltiptext2 = S'abonar a aquesta pagina
 
 # LOCALIZATION NOTE (characterencoding-button.label): The \u00ad character at the beginning
 # of the string is used to disable auto hyphenation on the button text when it is displayed
 # in the menu panel.
+characterencoding-button.label = Encodatge dels caractèrs
+characterencoding-button.tooltiptext2 = Afichar las opcions d'encodatge de caractèrs
 
 email-link-button.label = Madar per corrièr electronic un ligam cap a la pagina…
+email-link-button.tooltiptext3 = Mandar per corrièr electronic un ligam cap a la pagina
 
 # LOCALIZATION NOTE(quit-button.tooltiptext.linux2): %1$S is the brand name (e.g. Firefox),
 # %2$S is the keyboard shortcut
