--- a/browser/chrome/browser/devtools/appcacheutils.properties
+++ b/browser/chrome/browser/devtools/appcacheutils.properties
@@ -116,6 +116,7 @@ settingsBadValue=La seccion SETTINGS pòt pas conténer qu'una sola valor, « pr
 # LOCALIZATION NOTE (invalidSectionName): the associated cache manifest
 # contains an invalid section name. Parameters: %1$S is the section name, %2$S
 # is the line number.
+invalidSectionName=Nom de seccion (%S) incorrècte a la linha %S.
 
 # LOCALIZATION NOTE (entryNotFound): the requested cache entry that does not
 # exist.
