--- a/browser/chrome/browser/devtools/canvasdebugger.properties
+++ b/browser/chrome/browser/devtools/canvasdebugger.properties
@@ -13,17 +13,21 @@
 # LOCALIZATION NOTE (ToolboxCanvasDebugger.label):
 # This string is displayed in the title of the tab when the Shader Editor is
 # displayed inside the developer tools window and in the Developer Tools Menu.
+ToolboxCanvasDebugger.label=Canvas
 
 # LOCALIZATION NOTE (ToolboxCanvasDebugger.tooltip):
 # This string is displayed in the tooltip of the tab when the Shader Editor is
 # displayed inside the developer tools window.
+ToolboxCanvasDebugger.tooltip=Aisinas per inspectar e desbugar los contèxtes\u0020
 
 # LOCALIZATION NOTE (noSnapshotsText): The text to display in the snapshots menu
 # when there are no recorded snapshots yet.
+noSnapshotsText=I a pas cap d'instantanèu.
 
 # LOCALIZATION NOTE (snapshotsList.itemLabel):
 # This string is displayed in the snapshots list of the Canvas Debugger,
 # identifying a set of function calls of a recorded animation frame.
+snapshotsList.itemLabel=Instantanèu #%S
 
 # LOCALIZATION NOTE (snapshotsList.loadingLabel):
 # This string is displayed in the snapshots list of the Canvas Debugger,
@@ -38,16 +42,20 @@ snapshotsList.saveLabel=Enregistrar
 # LOCALIZATION NOTE (snapshotsList.savingLabel):
 # This string is displayed in the snapshots list of the Canvas Debugger,
 # while saving an item to disk.
+snapshotsList.savingLabel=Enregistrament...
 
 # LOCALIZATION NOTE (snapshotsList.loadedLabel):
 # This string is displayed in the snapshots list of the Canvas Debugger,
 # for an item which was loaded from disk
+snapshotsList.loadedLabel=Enregistrat dempuèi lo disc
 
 # LOCALIZATION NOTE (snapshotsList.saveDialogTitle):
 # This string is displayed as a title for saving a snapshot to disk.
+snapshotsList.saveDialogTitle=Enregistrar l'instantanèu de la trama d'animacion…
 
 # LOCALIZATION NOTE (snapshotsList.saveDialogJSONFilter):
 # This string is displayed as a filter for saving a snapshot to disk.
+snapshotsList.saveDialogJSONFilter=Fichièrs JSON
 
 # LOCALIZATION NOTE (snapshotsList.saveDialogAllFilter):
 # This string is displayed as a filter for saving a snapshot to disk.
@@ -57,8 +65,10 @@ snapshotsList.saveDialogAllFilter=Totes los fichièrs
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # This string is displayed in the snapshots list of the Canvas Debugger,
 # as a generic description about how many draw calls were made.
+snapshotsList.drawCallsLabel=#1 dessenh;#1 dessenhs
 
 # LOCALIZATION NOTE (snapshotsList.functionCallsLabel):
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # This string is displayed in the snapshots list of the Canvas Debugger,
 # as a generic description about how many function calls were made in total.
+snapshotsList.functionCallsLabel=#1 apèl;#1 apèls
