--- a/browser/chrome/browser/devtools/webconsole.properties
+++ b/browser/chrome/browser/devtools/webconsole.properties
@@ -97,7 +97,7 @@ gcliterm.instanceLabel=Instància de %S
 # The 2nd line, from "function" to the end of the line, is a link to the
 # JavaScript debugger.
 reflow.messageWithNoLink=reflow: %Sms
-reflow.messageWithLink=reflow: %Sms 
+reflow.messageWithLink=reflow: %Sms\u0020
 reflow.messageLinkText=foncion %1$S, %2$S linha %3$S
 
 # LOCALIZATION NOTE (stacktrace.anonymousFunction): this string is used to
@@ -226,3 +226,4 @@ cdFunctionInvalidArgument=Impossible d'utilizar cd() dins la fenèstra donada. A
 # LOCALIZATION NOTE (messageToggleDetails): the text that is displayed when
 # you hover the arrow for expanding/collapsing the message details. For
 # console.error() and other messages we show the stacktrace.
+messageToggleDetails=Afichar/amagar los detalhs del messatge.
