--- a/browser/chrome/browser/syncSetup.properties
+++ b/browser/chrome/browser/syncSetup.properties
@@ -35,6 +35,7 @@ passwordsCount.label        = #1 senhal;#1 senhals
 # LOCALIZATION NOTE (addonsCount.label): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of add-ons, see the link above for forms
+addonsCount.label        = #1 modul complementari;#1 moduls complementaris
 
 save.recoverykey.title = Enregistrar la clau de recuperacion
 save.recoverykey.defaultfilename = Clau de recuperacion de Firefox.html
