--- a/dom/chrome/nsWebBrowserPersist.properties
+++ b/dom/chrome/nsWebBrowserPersist.properties
@@ -8,6 +8,8 @@ launchError=Impossible d'enregistrar %S per çò que i a agut una error desconeg
 diskFull=I a pas pro d'espaci sul disc per enregistrar %S.\n\nEscafatz los fichièrs inutils del disc puèi tornatz ensajar o ensajatz de l'enregistrar endacòm mai.
 readOnly=Impossible d'enregistrar %S per çò que lo disc, lo repertòri o lo fichièr es protegit en escritura.\n\nLevatz la proteccion e tornatz ensajar, o ensajatz d'enregistrar endacòm mai.
 accessError=Impossible d'enregistrar %S per çò que podètz pas modificar lo contengut d'aqueste repertòri.\n\nModificatz las proprietats del repertòri e tornatz ensajar, o ensajatz d'enregistrar endacòm mai.
+SDAccessErrorCardReadOnly=Impossible de telecargar lo fichièr perque la carta SD es en cors d'utilizacion.
+SDAccessErrorCardMissing=Impossible de telecargar lo fichièr perque la carta SD es mancanta.\u0020
 helperAppNotFound=Impossible de dobrir %S per çò que l'aplicacion associada existís pas. Cambiatz l'associacion dins vòstras preferéncias.
 noMemory=I a pas pro de memòria disponibla per acabar l'accion demandada.\n\nQuitatz d'unas aplicacions e tornatz ensajar.
 title=Telecargament de %S
