--- a/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -102,27 +102,39 @@ details.notification.upgrade=%1$S serà mes a jorn aprèp la reaviada de %2$S.
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of days from now that the experiment will remain active (detail view).
+details.experiment.time.daysRemaining=#1 jorn restant;#1 jorns restants
 #LOCALIZATION NOTE (details.experiment.time.endsToday) The experiment will end in less than a day (detail view).
+details.experiment.time.endsToday=Mens d'un jorn restant
 # LOCALIZATION NOTE (details.experiment.time.daysPassed):
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of days since the experiment ran (detail view).
+details.experiment.time.daysPassed=I a #1 jorn;I a #1 jorns
 #LOCALIZATION NOTE (details.experiment.time.endedToday) The experiment ended less than a day ago (detail view).
+details.experiment.time.endedToday=I a mens d'un jorn
 #LOCALIZATION NOTE (details.experiment.state.active) This experiment is active (detail view).
+details.experiment.state.active=Actiu
 #LOCALIZATION NOTE (details.experiment.state.complete) This experiment is complete (it was previously active) (detail view).
+details.experiment.state.complete=Acabat
 
 # LOCALIZATION NOTE (experiment.time.daysRemaining):
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of days from now that the experiment will remain active (list view item).
+experiment.time.daysRemaining=#1 jorn restant;#1 jorns restants
 #LOCALIZATION NOTE (experiment.time.endsToday) The experiment will end in less than a day (list view item).
+experiment.time.endsToday=Mens d'un jorn restant
 # LOCALIZATION NOTE (experiment.time.daysPassed):
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of days since the experiment ran (list view item).
+experiment.time.daysPassed=I a #1 jorn;I a #1 jorns
 #LOCALIZATION NOTE (experiment.time.endedToday) The experiment ended less than a day ago (list view item).
+experiment.time.endedToday=Mens d'un jorn restant
 #LOCALIZATION NOTE (experiment.state.active) This experiment is active (list view item).
+experiment.state.active=Actiu
 #LOCALIZATION NOTE (experiment.state.complete) This experiment is complete (it was previously active) (list view item).
+experiment.state.complete=Acabat
 
 installFromFile.dialogTitle=Causissètz un modul d'installar
 installFromFile.filterName=Moduls complementaris
@@ -157,3 +169,4 @@ type.locale.name=Lengas
 type.plugin.name=Empeutons (Plugins)
 type.dictionary.name=Diccionaris
 type.service.name=Servicis
+type.experiment.name=Experimentacions
