[oc] update from Pootle (firefox)

--- a/browser/chrome/browser/devtools/scratchpad.properties
+++ b/browser/chrome/browser/devtools/scratchpad.properties
@@ -95,6 +95,9 @@ connectionTimeout=Relambi d'espèra de la connexion depassat. Consultatz la cons
 # in the Developer Tools Menu.
 scratchpad.label=Lausa
 
+# LOCALIZATION NOTE (scratchpad.panelLabel): this is used as the
+# label for the toolbox panel.
+
 # LOCALIZATION NOTE (scratchpad.tooltip):  This string is displayed in the
 # tooltip of the tab when the Scratchpad is displayed inside the developer tools
 # window.
