--- a/dom/chrome/accessibility/AccessFu.properties
+++ b/dom/chrome/accessibility/AccessFu.properties
@@ -64,7 +64,7 @@ form           =       formulari
 comboboxlist   =       lista desenrotlanta
 comboboxoption =       opcion de lista desenrotlanta
 imagemap       =       imatge decopat
-listboxoption  =       opcion de lista
+listboxoption  =       opcion
 listbox        =       lista
 flatequation   =       eqüacion
 gridcell       =       cellula
