--- a/dom/chrome/layout/css.properties
+++ b/dom/chrome/layout/css.properties
@@ -21,6 +21,7 @@ PEGatherMediaEOF=Fin de lista mèdia dins una règla @import o @media
 PEGatherMediaNotComma=Virgula inesperada dins una lista mèdia, mas « %1$S » es estat trobat.
 PEGatherMediaNotIdent=Identificator inesperat dins una lista mèdia, mas « %1$S » es estat trobat.
 PEGatherMediaReservedMediaType=Mot clau reservat « %1$S » trobat a la plaça d'un tipe de mèdia.
+PEParseSourceSizeListNotComma=Fin de valor esperada  ','  mas '%1$S' trobat.
 PEImportNotURI=URI inesperada dins una règla @import, mas « %1$S » es estat trobat.
 PEImportBadURI=URI invalida dins una règla @import : « %1$S ».
 PEImportUnexpected=« %1$S » inesperat trobat dins @import.
@@ -44,6 +45,8 @@ PESelectorListExtraEOF=« , » o « { »
 PESelectorListExtra=« , » o « { » inesperat, mas « %1$S » es estat trobat.
 PESelectorGroupNoSelector=Selector inesperat.
 PESelectorGroupExtraCombinator=Combinator blocant.
+PECounterStyleNotIdent=Identificador esperat pel nom de la règla @counter-style.
+PECounterStyleBadBlockStart=Esperàvem '{' per començar la règla @counter-style mas avèm trobat '%1$S'.
 PEClassSelEOF=nom de classa
 PEClassSelNotIdent=Identificant per un selector de classa inesperat, mas « %1$S » es estat trobat.
 PETypeSelEOF=Tipe d'element
