--- a/toolkit/chrome/global/findbar.properties
+++ b/toolkit/chrome/global/findbar.properties
@@ -10,6 +10,10 @@ NormalFind=Recercar dins la pagina
 FastFind=Recèrca rapida
 FastFindLinks=Recèrca rapida (ligams solament)
 CaseSensitive=(Sensible a la cassa)
-FoundMatchCount=%S ocurréncia
-FoundMatchesCount=%S ocurréncias
-FoundTooManyMatches=Mai de %S ocurréncias
+# LOCALIZATION NOTE (FoundMatches): Semicolon-separated list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# #1 is currently selected match and #2 the total amount of matches.
+# LOCALIZATION NOTE (FoundMatchesCountLimit): Semicolon-separated list of plural
+# forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# #1 is the total amount of matches allowed before counting stops.
