--- a/webapprt/webapprt/overrides/dom.properties
+++ b/webapprt/webapprt/overrides/dom.properties
@@ -33,10 +33,18 @@ FormValidationInvalidURL=Picatz una URL.
 FormValidationPatternMismatch=Modificatz la valor per correspondre al format demandat.
 # LOCALIZATION NOTE (FormValidationPatternMismatchWithTitle): %S is the (possibly truncated) title attribute value.
 FormValidationPatternMismatchWithTitle=Modificatz la valor del campa per correspondre al format demandat : %S.
-# LOCALIZATION NOTE (FormValidationRangeOverflow): %S can be a number, a date or a time.
-FormValidationRangeOverflow=Seleccionatz una valor qu'es inferiora a %S.
-# LOCALIZATION NOTE (FormValidationRangeUnderflow): %S can be a number, a date or a time.
-FormValidationRangeUnderflow=Seleccionatz una valor qu'es superiora a %S.
+# LOCALIZATION NOTE (FormValidationNumberRangeOverflow): %S is a number.
+FormValidationNumberRangeOverflow=Seleccionatz una valor qu'es pas superiora a %S.
+# LOCALIZATION NOTE (FormValidationDateRangeOverflow): %S is a date.
+FormValidationDateRangeOverflow=Seleccionatz una valor qu'es mai d'ora que %S.
+# LOCALIZATION NOTE (FormValidationTimeRangeOverflow): %S is a time.
+FormValidationTimeRangeOverflow=Seleccionatz una valor qu'es pas mai d'ora que %S.
+# LOCALIZATION NOTE (FormValidationNumberRangeUnderflow): %S is a number.
+FormValidationNumberRangeUnderflow=Seleccionatz una valor qu'es pas inferiora a %S.
+# LOCALIZATION NOTE (FormValidationDateRangeUnderflow): %S is a date.
+FormValidationDateRangeUnderflow=Seleccionatz una valor qu'es pas mai tard que %S.
+# LOCALIZATION NOTE (FormValidationTimeRangeUnderflow): %S is a time.
+FormValidationTimeRangeUnderflow=Seleccionatz una valor qu'es inferiora a %S.
 # LOCALIZATION NOTE (FormValidationStepMismatch): both %S can be a number, a date or a time.
 FormValidationStepMismatch=Seleccionatz una valor valida. Las doas valors validas las mai pròchas son %S e %S.
 # LOCALIZATION NOTE (FormValidationStepMismatchOneValue): %S can be a number, a date or a time. This is called instead of FormValidationStepMismatch when the second value is the same as the first.
