--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -112,6 +112,13 @@ crashedpluginsMessage.submitButton.label=Mandar un rapòrt de fracàs
 crashedpluginsMessage.submitButton.accesskey=M
 crashedpluginsMessage.learnMore=Ne saber mai…
 
+# Keyword fixup messages
+# LOCALIZATION NOTE (keywordURIFixup.message): Used when the user tries to visit
+# a local host page, by the time the DNS request recognizes it, we have already
+# loaded a search page for the given word.  An infobar then asks to the user
+# whether he rather wanted to visit the host.  %S is the recognized host.
+keywordURIFixup.dismiss=Non, mercé
+
 ## Plugin doorhanger strings
 # LOCALIZATION NOTE (pluginActivateNew.message): Used for newly-installed
 # plugins which are not known to be unsafe. %1$S is the plugin name and %2$S
@@ -237,10 +244,15 @@ refreshBlocked.redirectLabel=%S a empachat la redireccion automatica cap a una a
 # %S is the keyboard shortcut for "Show All Bookmarks"
 bookmarksMenuButton.tooltip=Afichar vòstres marcapaginas (%S)
 # Star button
-starButtonOn.tooltip=Modificar aqueste marcapaginas
-starButtonOff.tooltip=Marcar aquesta pagina
+starButtonOn.tooltip2=Modificar aqueste marcapaginas (%S)
+starButtonOff.tooltip2=Marcar aquesta pagina (%S)
 starButtonOverflowed.label=Marcar aquesta pagina
 starButtonOverflowedStarred.label=Modificar aqueste marcapaginas
+
+# Downloads button tooltip
+# LOCALIZATION NOTE (downloads.tooltip):
+# %S is the keyboard shortcut for "Downloads"
+downloads.tooltip=Afichar la progression dels telecargaments en cors (%S)
 
 # Print button tooltip on OS X
 # LOCALIZATION NOTE (printButton.tooltip):
@@ -253,6 +265,10 @@ printButton.tooltip=Imprimir aquesta pagina… (%S)
 # LOCALIZATION NOTE (newWindowButton.tooltip):
 # %S is the keyboard shortcut for "New Window"
 newWindowButton.tooltip=Dobrir una fenèstra novèla (%S)
+
+# New Tab button tooltip
+# LOCALIZATION NOTE (newTabButton.tooltip):
+# %S is the keyboard shortcut for "New Tab"
 
 # Offline web applications
 offlineApps.available=Aqueste site web (%S) vòl conservar de donadas sus vòstre ordenador per una utilizacion sens connexion.
@@ -281,8 +297,6 @@ identity.mixed_active_loaded2=Aqueste site possedís de contengut interactiu pas
 identity.unencrypted=Vòstra connexion a aqueste site es pas chifrada.
 
 identity.unknown.tooltip=Aqueste site web balha pas d'entresenhas sus son identitat.
-
-identity.ownerUnknown2=(desconegut)
 
 # LOCALIZATION NOTE (identity.chrome): %S is replaced with the brandShortName.
 identity.chrome=Aquò es una pagina securizada de %S.
@@ -476,16 +490,21 @@ identity.loggedIn.description = Identificat en tant que : %S
 identity.loggedIn.signOut.label = Se desconnectar
 identity.loggedIn.signOut.accessKey = d
 
-# LOCALIZATION NOTE (getUserMedia.shareCamera.message, getUserMedia.shareMicrophone.message, getUserMedia.shareCameraAndMicrophone.message): %S is the website origin (e.g. www.mozilla.org)
+# LOCALIZATION NOTE (getUserMedia.shareCamera.message, getUserMedia.shareMicrophone.message,
+#                    getUserMedia.shareScreen.message, getUserMedia.shareCameraAndMicrophone.message,
+#                    getUserMedia.shareScreenAndMicrophone.message):
+#  %S is the website origin (e.g. www.mozilla.org)
+getUserMedia.shareCamera.message = Volètz partejar vòstra webcam amb %S ?
+getUserMedia.shareMicrophone.message = Volètz partejar vòstre microfòn amb %S ?
+getUserMedia.shareScreen.message = Volètz partejar vòstra ecran amb %S ?
+getUserMedia.shareCameraAndMicrophone.message = Volètz partejar vòstra webcam e vòstre microfòn amb %S ?
+getUserMedia.shareScreenAndMicrophone.message = Volètz partejar vòstre microfòn e  vòstre ecran amb %S ?
+getUserMedia.noVideo.label = Pas cap de vidèo
+getUserMedia.noAudio.label = Pas cap d'àudio
 # LOCALIZATION NOTE (getUserMedia.shareSelectedDevices.label):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # The number of devices can be either one or two.
-getUserMedia.shareCamera.message = Volètz partejar vòstra webcam amb %S ?
-getUserMedia.shareMicrophone.message = Volètz partejar vòstre microfòn amb %S ?
-getUserMedia.shareCameraAndMicrophone.message = Volètz partejar vòstra webcam e vòstre microfòn amb %S ?
-getUserMedia.noVideo.label = Pas cap de vidèo
-getUserMedia.noAudio.label = Pas cap d'àudio
 getUserMedia.shareSelectedDevices.label = Partejar lo periferic seleccionat;Partejar los periferics seleccionats
 getUserMedia.shareSelectedDevices.accesskey = P
 getUserMedia.always.label = Partejar totjorn
@@ -497,6 +516,8 @@ getUserMedia.never.accesskey = j
 getUserMedia.sharingCamera.message2 = Actualament, partejatz vòstra webcam amb aquesta pagina.
 getUserMedia.sharingMicrophone.message2 = Actualament, partejatz vòstra webcam amb aquesta pagina.
 getUserMedia.sharingCameraAndMicrophone.message2 = Actualament, partejatz vòstra webcam e vòstre microfòn amb aquesta pagina.
+getUserMedia.sharingScreen.message = Actualament, partejatz vòstre ecran amb aquesta pagina.
+getUserMedia.sharingWindow.message = Actualament, partejatz vòstra una fenèstra amb aquesta pagina.
 getUserMedia.continueSharing.label = Contunhar lo partiment
 getUserMedia.continueSharing.accesskey = C
 getUserMedia.stopSharing.label = Arrestar lo partiment
