--- a/browser/chrome/browser/devtools/app-manager.properties
+++ b/browser/chrome/browser/devtools/app-manager.properties
@@ -29,7 +29,7 @@ validator.invalidProjectType=Tipe de projècte « %S » desconegut
 # don't translate 'icons' and 'name'.
 validator.missNameManifestProperty=Lo camp obligatòri « name » es absent del manifèste.
 validator.missIconsManifestProperty=Lo camp « icons » es absent del manifèste.
-validator.missIconMarketplace=la publicacion d'aplicacion sul Marketplace necessita una icòna d'al mens 128px
+validator.missIconMarketplace2=la publicacion d'aplicacion sul Marketplace necessita una icòna d'al mens 128px
 validator.invalidAppType=Tipe d'aplicacion desconegut : « %S ».
 validator.invalidHostedPriviledges=Las aplicacions albergadas pòdon pas èsser de tipe « %S ».
 validator.noCertifiedSupport=Las aplicacions certificadas (« certified ») son pas entièrament presas en carga pel gestionari d'aplicacions.
