--- a/browser/chrome/browser/devtools/debugger.properties
+++ b/browser/chrome/browser/devtools/debugger.properties
@@ -15,6 +15,9 @@
 # displayed inside the developer tools window and in the Developer Tools Menu.
 ToolboxDebugger.label=Desbugador
 
+# LOCALIZATION NOTE (ToolboxDebugger.panelLabel):
+# This is used as the label for the toolbox panel.
+
 # LOCALIZATION NOTE (DebuggerWindowTitle):
 # The title displayed for the debugger window.
 DebuggerWindowTitle=Desbugador del navigador
