--- a/browser/chrome/browser/devtools/gcli.properties
+++ b/browser/chrome/browser/devtools/gcli.properties
@@ -80,19 +80,6 @@ fileErrIsNotDirectory='%1$S' es pas un fichièr
 # expression
 fileErrDoesntMatch=« %1$S » correspond pas a « %2$S »
 
-# LOCALIZATION NOTE: When a command has a parameter that has a number of
-# pre-defined options the user interface presents these in a drop-down menu,
-# where the first 'option' is an indicator that a selection should be made.
-# This string describes that first option.
-fieldSelectionSelect=Seleccionar un %S…
-
-# LOCALIZATION NOTE (fieldArrayAdd, fieldArrayDel): When a command has a
-# parameter that can be repeated multiple times (e.g. like the 'cat a.txt
-# b.txt' command) the user interface presents buttons to add and remove
-# arguments. This string is used to add arguments.
-fieldArrayAdd=Apondre
-fieldArrayDel=Escafar
-
 # LOCALIZATION NOTE: When the menu has displayed all the matches that it
 # should (i.e. about 10 items) then we display this to alert the user that
 # more matches are available.
@@ -160,7 +147,7 @@ helpManSynopsis=Sinòpsis
 
 # LOCALIZATION NOTE: This message is displayed in the help page if the command
 # has no parameters.
-helpManNone=Pas cap de paramètre
+helpManNone=Pas cap
 
 # LOCALIZATION NOTE: This message is displayed in response to the 'help'
 # command when used without a filter, just above the list of known commands.
@@ -181,14 +168,17 @@ helpManRequired=requesit
 helpManOptional=Opcional
 helpManDefault=opcional, defaut=%1$S
 
+# LOCALIZATION NOTE: This forms part of the output from the 'help' command.
+# 'GCLI' is a project name and should be left untranslated.
+helpIntro=GCLI es una experiéncia que la tòca n'es de crear una linha de comanda de fòrt bon utilizar pels desvolopaires web.
+
 # LOCALIZATION NOTE: Text shown as part of the output of the 'help' command
 # when the command in question has sub-commands, before a list of the matching
 # sub-commands.
 subCommands=Soscomandas
 
-# LOCALIZATION NOTE: Text shown as part of the output of the 'help' command
-# when the command in question should have sub-commands but in fact has none.
-subCommandsNone=Pas cap
+# LOCALIZATION NOTE: This error message is displayed when the command line is
+# cannot find a match for the parse types.
 
 # LOCALIZATION NOTE (contextDesc, contextManual, contextPrefixDesc): These
 # strings are used to describe the 'context' command and its 'prefix'
@@ -226,24 +216,18 @@ connectDupReply=Una connexion nomenada %S existís ja.
 # comment for 'connect' for an explanation about 'prefix'.
 connectReply=%S comanda(s) aponduda(s).
 
-# LOCALIZATION NOTE (disconnectDesc2, disconnectManual2, disconnectPrefixDesc,
-# disconnectForceDesc): These strings describe the 'disconnect' command and
+# LOCALIZATION NOTE (disconnectDesc2, disconnectManual2,
+# disconnectPrefixDesc): These strings describe the 'disconnect' command and
 # all its available parameters. See localization comment for 'connect' for an
 # explanation about 'prefix'.
 disconnectDesc2=Se desconnectar del servidor
 disconnectManual2=Se desconnectar del servidor actualament utilizat per l'execucion de comandas distantas
 disconnectPrefixDesc=Lo prefix parent per las comandas importadas
-disconnectForceDesc=Ignorar las requèstas en cors
 
 # LOCALIZATION NOTE: This is the output of the 'disconnect' command,
 # explaining the user what has been done. Parameters: %S is the number of
 # commands removed.
 disconnectReply=%S comanda(s) suprimida(s).
-
-# LOCALIZATION NOTE: This error message is displayed when the user attempts to
-# disconnect before all requests have completed. Parameters: %S is a list of
-# incomplete requests.
-disconnectOutstanding=Requèstas en cors (%S)
 
 # LOCALIZATION NOTE (globalDesc, globalWindowDesc, globalOutput): These
 # strings describe the 'global' command and its parameters
@@ -289,13 +273,6 @@ prefSetSettingManual=Lo nom del paramètre de modificar.
 prefSetValueDesc=Novèla valor del paramètre
 prefSetValueManual=La novèla valor pel paramètre especificat
 
-# LOCALIZATION NOTE (prefSetCheckHeading, prefSetCheckBody, prefSetCheckGo):
-# These strings are displayed to the user the first time they try to alter a
-# setting.
-prefSetCheckHeading=Aquò pòt invalidar vòstra garantida !
-prefSetCheckBody=La modificacion d'aquestas preferéncias avançadas pòt èsser damatjable per l'estabilitat, la seguretat e las performàncias d'aquesta aplicacion. Contunhetz que se sabètz çò que fasètz.
-prefSetCheckGo=Farai atencion, o promèti !
-
 # LOCALIZATION NOTE (prefResetDesc, prefResetManual, prefResetSettingDesc,
 # prefResetSettingManual): These strings describe the 'pref reset' command and
 # all its parameters.
@@ -338,8 +315,3 @@ hideIntroDesc=Afichar lo messatge inicial de benvenguda
 # users to select between showing no tooltips, permanent tooltips, and only
 # important tooltips.
 eagerHelperDesc=Entosiasme de las bullas d'informacion
-
-# LOCALIZATION NOTE: This text is displayed at the top of the output for the
-# help command, just before the list of commands. This text is wrapped inside
-# a link to a localized MDN article.
-introBody=Per mai d'entresenhas, consultatz MDN.
