--- a/browser/chrome/browser/devtools/inspector.properties
+++ b/browser/chrome/browser/devtools/inspector.properties
@@ -37,6 +37,9 @@ inspector.label=Inspector
 inspector.commandkey=C
 inspector.accesskey=I
 
+# LOCALIZATION NOTE (inspector.panelLabel.*)
+# Labels applied to the panel and views within the panel in the toolbox
+
 # LOCALIZATION NOTE (markupView.more.*)
 # When there are too many nodes to load at once, we will offer to
 # show all the nodes.
@@ -46,3 +49,6 @@ inspector.tooltip=Inspector d'estils e del DOM
 
 #LOCALIZATION NOTE: Used in the image preview tooltip when the image could not be loaded
 previewTooltip.image.brokenImage=Impossible de cargar l'imatge
+
+#LOCALIZATION NOTE: Used in the image preview tooltip when the image could not be loaded
+eventsTooltip.openInDebugger=Dobrir lo desbugador
