--- a/browser/chrome/browser/devtools/styleeditor.properties
+++ b/browser/chrome/browser/devtools/styleeditor.properties
@@ -38,6 +38,9 @@ error-load=Lo fuèlh d'estils a pas pogut èsser cargat.
 # LOCALIZATION NOTE  (error-save): This is shown when saving fails.
 error-save=Lo fuèlh d'estils a pas pogut èsser enregistrat.
 
+# LOCALIZATION NOTE  (error-compressed): This is shown when we can't show
+# coverage information because the css source is compressed.
+
 # LOCALIZATION NOTE  (importStyleSheet.title): This is the file picker title,
 # when you import a style sheet into the Style Editor.
 importStyleSheet.title=Importar un fuèlh d'estils
@@ -64,26 +67,13 @@ open.accesskey=l
 # conjunction with accel (Command on Mac or Ctrl on other platforms) to Save
 saveStyleSheet.commandkey=S
 
-# LOCALIZATION NOTE  (showOriginalSources.label): This is the label on the context
-# menu item to toggle showing original sources in the editor.
-showOriginalSources.label=Afichar las fonts originalas
-
-# LOCALIZATION NOTE  (showOriginalSources.accesskey): This is the access key for
-# the menu item to toggle showing original sources in the editor.
-showOriginalSources.accesskey=o
-
-# LOCALIZATION NOTE  (showCSSSources.label): This is the label on the context
-# menu item to toggle back to showing only CSS sources in the editor.
-showCSSSources.label=Afichar las fonts CSS
-
-# LOCALIZATION NOTE  (showCSSSources.accesskey): This is the access key for the
-# menu item to toggle back to showing only CSS sources in the editor.
-showCSSSources.accesskey=C
-
 # LOCALIZATION NOTE (ToolboxStyleEditor.label):
 # This string is displayed in the title of the tab when the style editor is
 # displayed inside the developer tools window and in the Developer Tools Menu.
 ToolboxStyleEditor.label=Editor d'estils
+
+# LOCALIZATION NOTE (ToolboxStyleEditor.panelLabel):
+# This is used as the label for the toolbox panel.
 
 # LOCALIZATION NOTE (ToolboxStyleEditor.tooltip2):
 # This string is displayed in the tooltip of the tab when the style editor is
