--- a/browser/chrome/browser/devtools/toolbox.properties
+++ b/browser/chrome/browser/devtools/toolbox.properties
@@ -35,9 +35,16 @@ toolbox.titleTemplate=%1$S - %2$S
 # name when no tool is selected.
 toolbox.defaultTitle=Aisinas pels desvolopaires
 
+# LOCALIZATION NOTE (toolbox.label): This is used as the label for the
+# toolbox as a whole
+toolbox.label=Aisinas pels desvolopaires
+
 # LOCALIZATION NOTE (optionsButton.tooltip): This is used as the tooltip
 # for the options panel tab.
 optionsButton.tooltip=Opcions de la bóstia d'aisinas
+
+# LOCALIZATION NOTE (options.panelLabel): This is used as the label for the
+# toolbox panel.
 
 # LOCALIZATION NOTE (options.toolNotSupported): This is the template
 # used to add a * marker to the label for the Options Panel tool checkbox for the
