--- a/browser/chrome/browser/devtools/webconsole.properties
+++ b/browser/chrome/browser/devtools/webconsole.properties
@@ -167,6 +167,9 @@ MenuWebconsole.label=Consòla Web
 # label of the tab in the devtools window.
 ToolboxTabWebconsole.label=Consòla :
 
+# LOCALIZATION NOTE (ToolboxWebConsole.panelLabel): the string used as the
+# label for the toolbox panel.
+
 # LOCALIZATION NOTE (ToolboxWebconsole.tooltip): the string displayed in the
 # tooltip of the tab when the Web Console is displayed inside the developer
 # tools window.
@@ -222,6 +225,14 @@ openNodeInInspector=Clicar per seleccionar lo nosèl dins l'inspector
 # LOCALIZATION NOTE (cdFunctionInvalidArgument): the text that is displayed when
 # cd() is invoked with an invalid argument.
 cdFunctionInvalidArgument=Impossible d'utilizar cd() dins la fenèstra donada. Argument invalid.
+
+# LOCALIZATION NOTE (selfxss.msg): the text that is displayed when
+# a new user of the developer tools pastes code into the console
+# %1 is the text of selfxss.okstring
+
+# LOCALIZATION NOTE (selfxss.msg): the string to be typed
+# in by a new user of the developer tools when they receive the sefxss.msg prompt.
+# Please avoid using non-keyboard characters here
 
 # LOCALIZATION NOTE (messageToggleDetails): the text that is displayed when
 # you hover the arrow for expanding/collapsing the message details. For
