--- a/dom/chrome/dom/dom.properties
+++ b/dom/chrome/dom/dom.properties
@@ -33,10 +33,12 @@ FormValidationInvalidURL=Picatz una URL.
 FormValidationPatternMismatch=Modificatz la valor per correspondre al format demandat.
 # LOCALIZATION NOTE (FormValidationPatternMismatchWithTitle): %S is the (possibly truncated) title attribute value.
 FormValidationPatternMismatchWithTitle=Modificatz la valor del campa per correspondre al format demandat : %S.
-# LOCALIZATION NOTE (FormValidationRangeOverflow): %S can be a number, a date or a time.
-FormValidationRangeOverflow=Seleccionatz una valor qu'es inferiora a %S.
-# LOCALIZATION NOTE (FormValidationRangeUnderflow): %S can be a number, a date or a time.
-FormValidationRangeUnderflow=Seleccionatz una valor qu'es superiora a %S.
+# LOCALIZATION NOTE (FormValidationNumberRangeOverflow): %S is a number.
+# LOCALIZATION NOTE (FormValidationDateRangeOverflow): %S is a date.
+# LOCALIZATION NOTE (FormValidationTimeRangeOverflow): %S is a time.
+# LOCALIZATION NOTE (FormValidationNumberRangeUnderflow): %S is a number.
+# LOCALIZATION NOTE (FormValidationDateRangeUnderflow): %S is a date.
+# LOCALIZATION NOTE (FormValidationTimeRangeUnderflow): %S is a time.
 # LOCALIZATION NOTE (FormValidationStepMismatch): both %S can be a number, a date or a time.
 FormValidationStepMismatch=Seleccionatz una valor valida. Las doas valors validas las mai pròchas son %S e %S.
 # LOCALIZATION NOTE (FormValidationStepMismatchOneValue): %S can be a number, a date or a time. This is called instead of FormValidationStepMismatch when the second value is the same as the first.
@@ -148,3 +150,28 @@ DataContainerEventWarning=L'utilizacion de DataContainerEvent es depreciada. Uti
 # LOCALIZATION NOTE: Do not translate "sendAsBinary" or "send(Blob data)"
 SendAsBinaryWarning=Lo metòde non estandard sendAsBinary es obsolèt e serà lèu levat. Utilizar lo metòde estandard send(Blob data) a la plaça.
 # LOCALIZATION NOTE: Do not translate "window.controllers"
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Down" and "ArrowDown".
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Left" and "ArrowLeft".
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Right" and "ArrowRight".
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Up" and "ArrowUp".
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Crsel" and "CrSel".
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Del" and "Delete".
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Exsel" and "ExSel".
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Menu" and "ContextMenu".
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Esc" and "Escape".
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Nonconvert" and "NonConvert".
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "HalfWidth" and "Hankaku".
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "RomanCharacters", "Romaji" and "Eisu".
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "FullWith" and "Zenkaku".
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "SelectMedia" and "MediaSelect".
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "MediaNextTrack" and "MediaTrackNext".
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "MediaPreviousTrack" and "MediaTrackPrevious".
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Red" and "ColorF0Red".
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Green" and "ColorF1Green".
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Yellow" and "ColorF2Yellow".
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Blue" and "ColorF3Blue".
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Live".
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Apps".
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "FastFwd" and "MediaFastForward".
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Zoom" and "ZoomToggle".
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key" and "Dead".
