--- a/dom/chrome/security/csp.properties
+++ b/dom/chrome/security/csp.properties
@@ -10,6 +10,11 @@ CSPViolation = Los paramètres de la pagina an empachat lo cargament d'una resso
 # %1$S is the directive that has been violated.
 # %2$S is the URI of the resource which violated the directive.
 CSPViolationWithURI = Los paramètres de la pagina an empachat lo cargament d'una ressorsa a %2$S (« %1$S »).
+# LOCALIZATION NOTE (CSPROViolation):
+# %1$S is the reason why the resource has not been loaded.
+# LOCALIZATION NOTE (CSPROViolationWithURI):
+# %1$S is the directive that has been violated.
+# %2$S is the URI of the resource which violated the directive.
 # LOCALIZATION NOTE (triedToSendReport):
 # %1$S is the URI we attempted to send a report to.
 triedToSendReport = A ensajat de mandar un rapòrt a una URI invalida : "%1$S"
