--- a/toolkit/chrome/global/devtools/styleinspector.properties
+++ b/toolkit/chrome/global/devtools/styleinspector.properties
@@ -35,6 +35,14 @@ rule.sourceElement=element
 # e.g "Inherited from body#bodyID"
 rule.inheritedFrom=Ereitat de %S
 
+# LOCALIZATION NOTE (rule.keyframe): Shown for CSS Rules keyframe header.
+# Will be passed an identifier of the keyframe animation name.
+
+# LOCALIZATION NOTE (rule.userAgentStyles): Shown next to the style sheet
+# link for CSS rules that were loaded from a user agent style sheet.
+# These styles will not be editable, and will only be visible if the
+# devtools.inspector.showUserAgentStyles pref is true.
+
 # LOCALIZATION NOTE (rule.pseudoElement): Shown for CSS rules
 # pseudo element header
 rule.pseudoElement=Pseudoelements
@@ -74,6 +82,13 @@ ruleView.contextmenu.copy=Copiar
 # the rule view context menu "Select all" entry.
 ruleView.contextmenu.copy.accessKey=C
 
+# LOCALIZATION NOTE (ruleView.contextmenu.copyColor): Text displayed in the rule
+# and computed view context menu when a color value was clicked.
+ruleView.contextmenu.copyColor=Copiar la color
+
+# LOCALIZATION NOTE (ruleView.contextmenu.copyColor.accessKey): Access key for
+# the rule and computed view context menu "Copy Color" entry.
+
 # LOCALIZATION NOTE (ruleView.contextmenu.showOrigSources): Text displayed in the rule view
 # context menu.
 ruleView.contextmenu.showOrigSources=Afichar las fonts originalas
@@ -89,6 +104,13 @@ ruleView.contextmenu.showCSSSources=Afichar las fonts CSS
 # LOCALIZATION NOTE (ruleView.contextmenu.showCSSSources.accessKey): Access key for
 # the rule view context menu "Show CSS sources" entry.
 ruleView.contextmenu.showCSSSources.accessKey=S
+
+# LOCALIZATION NOTE (ruleView.contextmenu.addRule): Text displayed in the
+# rule view context menu for adding a new rule to the element.
+ruleView.contextmenu.addRule=Apondre una règla
+
+# LOCALIZATION NOTE (ruleView.contextmenu.addRule.accessKey): Access key for
+# the rule view context menu "Add rule" entry.
 
 # LOCALIZATION NOTE (computedView.contextmenu.selectAll): Text displayed in the
 # computed view context menu.
